--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>Timestamp</th>
                             <th>Name</th>
                             <th>Register Number</th>
                             <th>Time In</th>
