--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Sheets Data</title>
+    <title>Google Sheets Data Viewer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,28 +21,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Register Number</th>
-                            <th>Time In</th>
-                            <th>Source</th>
-                            <th>Time Out</th>
-                            <th>Destination</th>
+                            <th>Column 1</th>
+                            <th>Column 2</th>
+                            <th>Column 3</th>
                         </tr>
                     </thead>
-                    <tbody id="sheet-data">
-                        <!-- Data will be loaded dynamically here -->
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Google Sheets Viewer. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
+                    <tbody id="
