--- a/index.html
+++ b/index.html
@@ -26,4 +26,20 @@
                             <th>Column 3</th>
                         </tr>
                     </thead>
-                    <tbody id="
+                    <tbody id="sheet-data">
+                        <!-- Data will be loaded dynamically here -->
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Google Sheets Viewer. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
