--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Column 1</th>
-                            <th>Column 2</th>
-                            <th>Column 3</th>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Registration Number</th>
                         </tr>
                     </thead>
                     <tbody id="sheet-data">
